# alloy3d

./: .gitignore  CMakeLists.txt  README.md
application/: CMakeLists.txt
application/include/: app_launch.h  model4cpp.h
application/src/: app_delegate.h  app_delegate.mm  renderer.h  renderer.mm
assets/samples/models/: animated_bouncer.glb  cube_jump.glb  sample_cube.glb  sample_mdl.glb
cmake/: Alloy3DConfig.cmake.in
docs/: api-ja.md  build-ja.md  migration-notes.md
functions/: CMakeLists.txt
functions/include/: draw2d.h  draw3d.h  font_render.h  model.h
functions/internal/alloy3d/metal/: draw2d.h  draw3d.h  model.h  sprite.h
functions/src/: camera.cpp  draw2d.mm  draw3d.mm  font_render.mm  game_pad.mm  keyboard.mm  model.mm  sprite.mm  texture.mm
include/alloy3d/: alloy3d.h  application.h  camera.h  game_pad.h  keyboard.h  model.h  sprite.h
samples/viewer/: main.cpp
shaders/: CMakeLists.txt  prim3d.metal  shader_def.h  simple3d.metal
src/: main.cpp
tools/: generate_bouncer_glb.py
